Version 10

--Fixed so that you can't bypass the 'Download Latest Version' message by
  logging in again (thanks Colorfusion).

--Fixed to hide map encryption key from console printout.  Made key less
  guessable buy incorporating recent mouse movement data.




Version 9  Live Server Fixes

--Houses still earn salary if wife living, some money left in house, or one of
  last two consecutive robberies was not successful.

--In admin mode, tape name search now matches against both robber and victim.

--Houses that have reached 0 in value are now removed from the house list until
  they either earn money or are edited by their owners.  This prevents dumping
  tools in a wrecked house repeatedly across lives and also mitigates senseless
  vandalism.  Also fixed a bug where a not-robbable house could be robbed on
  the server through a hacked client, even when it was not being shown on the
  house list.

--Experimenting with paying viable houses salary every 10 minutes instead of
  every hour (to make game more lively and quicker).




Version 9   2013-June-14

--Removed wayward Un-Ignore All button from security tape list (thanks Dan
  Alleck).

--Fixed so that backpack purchase/sale cannot be lost by jumping to security
  tapes (Tapes button hidden after purchase/sale made) (thanks Dan Alleck).

--Wire cutters can now disable an electric floor that is off.

--Made backpack quantities unlimited (instead of one item per slot).

--Improved behavior of undo button for tool sales (undone sales are put back
  where they were sold from, vault or backpack, when possible instead of always
  being put back in the vault).

--Added server-side check to enforce maximum number of backpack slots.

--Remaining backpack contents ditched and added to victim house's vault at end
  of robbery, no matter how robbery ends (success, death, or leaving).

--House map on robbery is now encrypted by server using a changing key provided