@@ -6,6 +6,10 @@ Version 10
 --Fixed to hide map encryption key from console printout.  Made key less
   guessable buy incorporating recent mouse movement data.
 
+--Fixed to hide Tapes button after tools transfered between vault and backpack,
+  so that transfers are not lost unexpectedly by jumping to view tapes (thanks
+  Matrix).
+
 
 
 
